prusti-tests/tests/verify_overflow/ui/core_proof/counterexamples/tuples.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/tuples.rs:6:11
   |
6  | #[ensures(result.1 >= 0)]
   |           ^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/tuples.rs:7:1
   |
7  | / fn test1(x: (i32, char)) -> (char, i32) {
8  | |     let y = x.0 - 2;
9  | |     let z = x.1;
10 | |     (z, y)
11 | | }
   | |_^
note: counterexample for "x"
       value:   (
            1,
            'c' (0x63),
        )
  --> $DIR/tuples.rs:7:10
   |
7  | fn test1(x: (i32, char)) -> (char, i32) {
   |          ^
note: counterexample for "y"
       value:   -1
  --> $DIR/tuples.rs:8:13
   |
8  |     let y = x.0 - 2;
   |             ^^^^^^^
note: counterexample for "z"
       value:   'c' (0x63)
  --> $DIR/tuples.rs:9:13
   |
9  |     let z = x.1;
   |             ^^^
note: counterexample for "result"
       value:   (
            'c' (0x63),
            -1,
        )
  --> $DIR/tuples.rs:10:5
   |
10 |     (z, y)
   |     ^^^^^^

error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/tuples.rs:15:5
   |
15 |     assert!(x.0 == x.1);
   |     ^^^^^^^^^^^^^^^^^^^
   |
note: the failing assertion is here
  --> $DIR/tuples.rs:15:5
   |
15 |     assert!(x.0 == x.1);
   |     ^^^^^^^^^^^^^^^^^^^
note: counterexample for "x"
       value:   (
            5,
            6,
        )
  --> $DIR/tuples.rs:14:10
   |
14 | fn test2(x: (i32, i32)) {
   |          ^
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/tuples.rs:21:13
   |
21 |             assert!(x.0 == 0);
   |             ^^^^^^^^^^^^^^^^^
   |
note: the failing assertion is here
  --> $DIR/tuples.rs:21:13
   |
21 |             assert!(x.0 == 0);
   |             ^^^^^^^^^^^^^^^^^
note: counterexample for "x"
       value:   (
            32,
            false,
        )
  --> $DIR/tuples.rs:18:10
   |
18 | fn test3(x: (i32, bool)) {
   |          ^
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

